@@ -3,6 +3,7 @@
 * Verilog: `elsif preprocessor directive
 * Verilog: fix for named generate blocks
 * Verilog: $onehot and $onehot0 are now elaboration-time constant
+* SystemVerilog: fix for #-# and #=# for empty matches
 * LTL/SVA to Buechi with --buechi
 
 # EBMC 5.6
